# autonome_roboter

./: README.md  auro.repos  install.sh
autonome_roboter/: CMakeLists.txt  package.xml
exercise_one/: CMakeLists.txt  package.xml
exercise_one/launch/: exercise_one.launch
general/: CMakeLists.txt  package.xml
general/launch/: general.launch
husky_highlevel_controller/: CMakeLists.txt  package.xml
husky_highlevel_controller/action/: HuskyDrive.action
husky_highlevel_controller/config/: config.rviz  config.yaml
husky_highlevel_controller/include/husky_highlevel_controller/: Algorithm.hpp  HuskyDriveActionServer.hpp  HuskyHighlevelController.hpp  HuskyHighlevelControllerClient.hpp  HuskyHighlevelControllerServer.hpp  HuskyHighlevelLaserController.hpp  HuskyLaserController.hpp
husky_highlevel_controller/launch/: start_husky_highlevel.launch
husky_highlevel_controller/msg/: PillarPose.msg
husky_highlevel_controller/src/: Algorithm.cpp  HuskyDriveActionServer.cpp  HuskyHighlevelController.cpp  HuskyHighlevelControllerClient.cpp  HuskyHighlevelControllerServer.cpp  HuskyHighlevelLaserController.cpp  HuskyLaserController.cpp  husky_drive_server_node.cpp  husky_highlevel_controller_client_node.cpp  husky_highlevel_controller_node.cpp  husky_highlevel_controller_server_node.cpp  husky_laser_controller_node.cpp
husky_highlevel_controller/worlds/: singlePillar.world
husky_slam_and_navigation/: CMakeLists.txt  package.xml
husky_slam_and_navigation/config/: costmap_common.yaml  planner.yaml
husky_slam_and_navigation/launch/: create_map.launch  husky_localization_and_navigation.launch
husky_slam_and_navigation/rviz/: nav.rviz
