<?xml version="1.0"?>
<package format="2">
  <name>exercise_one</name>
  <version>0.0.0</version>
  <description>The exercise_one package</description>

  <maintainer email="Tom.Georgi@htwg-konstanz.de">Tom Georgi</maintainer>
  <maintainer email="Christian.Schmeisser@htwg-konstanz.de">Christian Schmeisser</maintainer>

  <license>BSD</license>

  <author email="Tom.Georgi@htwg-konstanz.de">Tom Georgi</author>
  <author email="Christian.Schmeisser@htwg-konstanz.de">Christian Schmeisser</author>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
